==> hmbacher/genius-gateway/src/cc1101.c <==
#include <string.h>
#include <driver/spi_master.h>
#include <driver/gpio.h>
#include <sys/time.h> // Required for gettimeofday
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_log.h"
#include "cc1101.h"
#define HOST_ID SPI2_HOST
#define HOST_ID SPI3_HOST
#define CC1101_SELECT() gpio_set_level(CONFIG_CSN_GPIO, 0)
#define CC1101_DESELECT() gpio_set_level(CONFIG_CSN_GPIO, 1)
#define WAIT_MISO_LOW() while (gpio_get_level(CONFIG_MISO_GPIO) > 0)
#define WAIT_GDO0_HIGH() while (!gpio_get_level(CONFIG_GDO0_GPIO))
#define WAIT_GDO0_LOW() while (gpio_get_level(CONFIG_GDO0_GPIO))
#define READ_CONFIG_REG(regAddr, result) cc1101_read_reg(regAddr, CC1101_CONFIG_REGISTER, result)
#define READ_STATUS_REG(regAddr, result) cc1101_read_reg(regAddr, CC1101_STATUS_REGISTER, result)
#define DELAY_US(us) esp_rom_delay_us(us)

static esp_err_t cc1101_cmd_strobe(uint8_t cmd)
{
    CC1101_SELECT();
    WAIT_MISO_LOW();

    spi_transaction_t t;
    memset(&t, 0, sizeof(t));
    t.flags = SPI_TRANS_USE_TXDATA;
    t.length = 8; // 1 strobe cmd byte
    t.tx_data[0] = cmd;

    /* Polling transmit is typically faster than interrupt-based,
     * but does not allow for other tasks to run */
    esp_err_t ret = spi_device_polling_transmit(_handle, &t);

    CC1101_DESELECT();

    return ret;
}

static esp_err_t cc1101_write_reg(uint8_t regAddr, uint8_t value)
{
    CC1101_SELECT();
    WAIT_MISO_LOW();

    spi_transaction_t t;
    memset(&t, 0, sizeof(t));
    t.flags = SPI_TRANS_USE_TXDATA;
    t.length = 16; // 1 addr byte + 1 data byte
    t.tx_data[0] = regAddr;
    t.tx_data[1] = value;

    /* Polling transmit is typically faster than interrupt-based,
     * but does not allow for other tasks to run */
    esp_err_t ret = spi_device_polling_transmit(_handle, &t);

    CC1101_DESELECT();

    return ret;
}

static esp_err_t cc1101_write_burst_reg(uint8_t regAddr, uint8_t *buffer, uint8_t len)
{
    CC1101_SELECT();
    WAIT_MISO_LOW();

    spi_transaction_ext_t t;
    memset(&t, 0, sizeof(t));
    t.base.flags = SPI_TRANS_VARIABLE_ADDR;
    t.base.addr = regAddr | WRITE_BURST;
    t.base.length = 8 * len;
    t.base.tx_buffer = buffer;
    t.address_bits = 8;

    /* Polling transmit is typically faster than interrupt-based,
     * but does not allow for other tasks to run */
    esp_err_t ret = spi_device_polling_transmit(_handle, (spi_transaction_t *)&t);

    CC1101_DESELECT();

    return ret;
}

static esp_err_t cc1101_read_reg(uint8_t regAddr, uint8_t regType, uint8_t *result)
{
    CC1101_SELECT();
    WAIT_MISO_LOW();

    spi_transaction_t t;
    memset(&t, 0, sizeof(t));
    t.flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA;
    t.length = 16; // 1 addr byte + 1 data byte
    t.tx_data[0] = regAddr | regType;

    /* Polling transmit is typically faster than interrupt-based,
     * but does not allow for other tasks to run */
    esp_err_t ret = spi_device_polling_transmit(_handle, &t);

    CC1101_DESELECT();

    if (ret == ESP_OK)
    {
        /* Read register value is in the second received byte */
        *result = t.rx_data[1]; 
    }

    return ret;
}

static esp_err_t cc1101_read_burst_reg(uint8_t *buffer, uint8_t regAddr, uint8_t len)
{
    CC1101_SELECT();
    WAIT_MISO_LOW();

    spi_transaction_ext_t t;
    memset(&t, 0, sizeof(t));
    t.base.flags = SPI_TRANS_VARIABLE_ADDR;
    t.base.addr = regAddr | READ_BURST;
    t.base.length = 8 * len;
    t.base.rx_buffer = buffer;
    t.address_bits = 8;

    /* Polling transmit is typically faster than interrupt-based,
     * but does not allow for other tasks to run */
    esp_err_t ret = spi_device_polling_transmit(_handle, (spi_transaction_t *)&t);

    CC1101_DESELECT();

    return ret;
}

static esp_err_t cc1101_reset(void)
{
    CC1101_DESELECT();
    esp_rom_delay_us(5);
    CC1101_SELECT();
    esp_rom_delay_us(10);
    CC1101_DESELECT();
    esp_rom_delay_us(41);
    CC1101_SELECT();

    WAIT_MISO_LOW();
    /* Send reset strobe command */
    esp_err_t ret = cc1101_cmd_strobe(CC1101_SRES);
    WAIT_MISO_LOW();

    CC1101_DESELECT();

    return ret;
}

esp_err_t cc1101_init(void (*rx_callback)())
{
    /* Configuring/initializing SPI */
    if (cc1101_spi_init() == ESP_FAIL)
    {
        ESP_LOGE(TAG, "SPI could not be configured.");
        return ESP_FAIL;
    }

    /* Reset procedure according to CC1101 datasheet */
    if (cc1101_reset() != ESP_OK)
    {
        ESP_LOGE(TAG, "CC1101 could not be reset.");
        return ESP_FAIL;
    }

    /* Check Chip ID */
    uint8_t chip_partnum = 0xFF;
    uint8_t chip_version = 0xFF;
    READ_STATUS_REG(CC1101_PARTNUM, &chip_partnum);
    READ_STATUS_REG(CC1101_VERSION, &chip_version);
    ESP_LOGI(TAG, "CC1101_PARTNUM %d", chip_partnum);
    ESP_LOGI(TAG, "CC1101_VERSION %d", chip_version);
    if (chip_partnum != 0 || chip_version != 20)
    {
        ESP_LOGE(TAG, "CC1101 not installed.");
        return ESP_FAIL;
    }

    /* Configuring CC1101 */
    if (cc1101_write_burst_reg(0x00, (uint8_t *)defaultCfg, sizeof(defaultCfg)) != ESP_OK)
    {
        ESP_LOGE(TAG, "CC1101 could not be configured.");
        return ESP_FAIL;
    }

    /* Configure interrupt on GDO0 */
    _rx_callback = rx_callback;
    gpio_config_t io_conf = {
        .intr_type = GPIO_INTR_NEGEDGE, // GPIO interrupt type : falling edge
        .pin_bit_mask = 1ULL << CONFIG_GDO0_GPIO,
        .mode = GPIO_MODE_INPUT,
        .pull_up_en = 1,
        .pull_down_en = 0};
    gpio_config(&io_conf);
    gpio_install_isr_service(0);
    gpio_isr_handler_add(CONFIG_GDO0_GPIO, _rxtx_finish_isr, NULL);

    /* Setting to RX state */
    if (cc1101_set_rx_state() != ESP_OK)
    {
        ESP_LOGE(TAG, "CC1101 could not be set to RX state.");
        return ESP_FAIL;
    }

    return ESP_OK;
}

esp_err_t cc1101_set_rx_state(void)
{
    esp_err_t ret = cc1101_cmd_strobe(CC1101_SRX);

    if (ret == ESP_OK)
        _mode = CCM_RX;

    return ret;
}

esp_err_t cc1101_set_tx_state(void)
{
    esp_err_t ret = cc1101_cmd_strobe(CC1101_STX);

    if (ret == ESP_OK)
        _mode = CCM_TX;

    return ret;
}

esp_err_t cc1101_receive_data(cc1101_packet_t *packet)
{
    esp_err_t ret = cc1101_read_rx_fifo(packet);
    
    if (ret != ESP_OK)
        cc1101_flush_rx_fifo();

    return ret;
}

esp_err_t cc1101_send_data(unsigned char *tx_data, size_t length)
{
    esp_err_t ret = cc1101_write_tx_fifo(tx_data, length);
    
    if (ret != ESP_OK)
        cc1101_flush_tx_fifo();

    return ret;
}
